samples/_failures_safe/1761086678_863884_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2fb5f6b.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_c2fb5f6b.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
